@@ -1,4 +1,4 @@
 DIST wagon-file-1.0.tar.bz2 4820 RMD160 5fa596c8d1e553e5b02f70a802862ce05ac7c8d2 SHA1 de6c9aff114718097b0b37c14971d6b53c5682c1 SHA256 12fa7aac8f0161e35a6aedb3ffac7f0c8bd729567727c20f5b566e21921a9892
-EBUILD wagon-file-1.0.ebuild 708 RMD160 7f08f152351075b0cab475bb1e5f00957b86e0b5 SHA1 5be9211d517cce1bc611a0d0890e195025803cc9 SHA256 6262bb7470436d785c43d9aed78d332b2d41b71b227a8cf07da063a7c9b686b2
-MISC ChangeLog 405 RMD160 dca212f5a330a5293e377ce1baca2d226377d15c SHA1 6e0246939a5702f1e9aa094eb36ed30b0759ba90 SHA256 2b48cd1f8c694094aacbeb58308397b8abfbb166f74df3a484e2b0af7e223165
+EBUILD wagon-file-1.0.ebuild 780 RMD160 ca9151fa2e7110830e2086428470816d716f1558 SHA1 60697da4a9b8f5c88b4fb68ec675dd648de86ec8 SHA256 ddfa0b204950da7c28f652c543bf281900a9d10397a4770ecb95f0029021bb84
+MISC ChangeLog 524 RMD160 7eafcc4254845f31e1c1ace161af2c3f67c1a99c SHA1 5887b0d633d3f86804a41bba20c4d7ad2f45de0c SHA256 c9d1edcb015be78c20909f8e4a0130602f46af2a92d7cfcee2cc9c6ef21f7abc
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
