@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 May 2007; Alistair John Bush <ali_bush@gentoo.org>
+  wagon-file-1.0.ebuild:
+  Adding to ~amd64, Restricted tests
+
   25 Apr 2007; kiorky <kiorky@cryptelium.net> wagon-file-1.0.ebuild:
   Remove useless inherit
 
